# adventure-works

./: .gitignore  README.md  config.py  dag.mmd  elt.sh  erd.mmd  external_models.yaml  generate_hook_table_yaml.py  generate_hook_yaml.py  generate_models.py  generate_oriented_data_model.py  hook.yml  init.sh  kpi_dashboard.py  pyproject.toml
dataedo/: HumanResources_Department_129.html  HumanResources_EmployeeDepartmentHistory_131.html  HumanResources_EmployeePayHistory_132.html  HumanResources_Employee_130.html  HumanResources_JobCandidate_133.html  HumanResources_Shift_134.html  Person_AddressType_136.html  Person_Address_135.html  Person_BusinessEntityAddress_138.html  Person_BusinessEntityContact_139.html  Person_BusinessEntity_137.html  Person_ContactType_140.html  Person_CountryRegion_141.html  Person_EmailAddress_142.html  Person_Password_143.html  Person_PersonPhone_145.html  Person_Person_144.html  Person_PhoneNumberType_146.html  Person_StateProvince_147.html  Production_BillOfMaterials_148.html  Production_Culture_149.html  Production_Document_150.html  Production_Illustration_151.html  Production_Location_152.html  Production_ProductCategory_154.html  Production_ProductCostHistory_155.html  Production_ProductDescription_156.html  Production_ProductDocument_157.html  Production_ProductInventory_158.html  Production_ProductListPriceHistory_159.html  Production_ProductModelIllustration_161.html  Production_ProductModelProductDescriptionCulture_162.html  Production_ProductModel_160.html  Production_ProductPhoto_163.html  Production_ProductProductPhoto_164.html  (+36 more)
(+1116 files in other folders)
