[project]
name = "serverless-lakehouse"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "deltalake>=0.24.0",
    "dlt[deltalake,duckdb,filesystem,pyiceberg]>=1.5.0",
    "duckdb>=1.2.0",
    "enlighten>=1.13.0",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "plotly>=6.0.0",
    "polars>=1.21.0",
    "pyarrow>=17.0.0",
    "sqlmesh[github,web]>=0.162.2",
    "streamlit>=1.42.1",
    "streamlit-extras>=0.5.5",
    "watchdog>=6.0.0",
    "taskipy>=1.14.1"
]

[tool.taskipy.tasks]
adventure-works = "python ./pipelines/adventure_works.py prod"
sqlmesh-run = "sqlmesh run prod"
sqlmesh-plan = "sqlmesh plan prod" 
duckdb-to-iceberg = "python ./pipelines/duckdb_to_iceberg.py"
dashboard = "streamlit run ./streamlit/dashboard.py"
init = { cmd = "task adventure-works && task sqlmesh-plan && task duckdb-to-iceberg && task dashboard" }
elt = { cmd = "task adventure-works && task sqlmesh-run && task duckdb-to-iceberg && task dashboard" }